h1, h2 font size changed to small due to layout issue

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -135,7 +135,7 @@ line-height: 0.9;
 h1.display-1 {
   font-family: "Bebas Neue", sans-serif;
   font-style: normal;
-  font-size: 4rem;
+  font-size: 2rem;
   font-weight: 400;
   line-height: 0.9; 
   margin-top: 1rem;
@@ -354,12 +354,12 @@ h1, h2, h5, h6, .h1, .h2, .h5, .h6 {
 
 h2 {
   color: #D3D3D3;
-  font-size: 2.5rem;
+  font-size: 1.5rem;
   font-weight: normal; /* Ensure h3 is not bold */
   font-family: "Bebas Neue", sans-serif;
   font-style: normal;
   margin-bottom: 0.5rem;
-  line-height: 1;
+  line-height: 1.1;
 }
 
 
